--- a/views/login.mustache
+++ b/views/login.mustache
@@ -21,7 +21,7 @@
     <label for="exampleInputPassword1">Password</label>
     <input type="password" class="form-control" name="password" placeholder="Password">
   </div>
-  <button type="register" class="btn btn-dark">Login</button>
+  <button type="login" class="btn btn-dark">Login</button>
 </form>
 </div>
 
