--- a/views/partials/menu.mustache
+++ b/views/partials/menu.mustache
@@ -1,5 +1,7 @@
-<nav class="navbar navbar-expand-lg nav class=navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">LifeKits</a>
+<div class="container">
+
+<nav class="navbar navbar-expand-md nav class=navbar navbar-dark bg-dark">
+  <a class="navbar-brand display-2" href="/">LifeKits</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -30,3 +32,5 @@
     </ul>
   </div>
 </nav>
+
+</div>
