--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,11 @@
 body {
-  background-color: palevioletred;
+  background-image: linear-gradient(
+    to right,
+    rgba(37, 35, 158, 0),
+    rgb(30, 4, 90)
+  );
+  padding-top: 4.2rem;
+  padding-bottom: 4.2rem;
 }
 
 .product-preview-image {
